[gd_scene load_steps=7 format=3 uid="uid://cl430utoabpt0"]

[ext_resource type="PackedScene" uid="uid://cglbpyq6fsq81" path="res://Scenes/game.tscn" id="1_034mo"]
[ext_resource type="Script" path="res://Scenes/Scripts/main.gd" id="1_jk5vj"]
[ext_resource type="PackedScene" uid="uid://u25dgbyqs3rg" path="res://Scenes/title.tscn" id="3_vmxd8"]
[ext_resource type="Theme" uid="uid://cedwkvggr4pcc" path="res://Themes/MenuButton.tres" id="4_ld5mg"]
[ext_resource type="PackedScene" uid="uid://dwk5ktuot37aa" path="res://Scenes/settings.tscn" id="5_8kfcr"]
[ext_resource type="PackedScene" uid="uid://ry50natwfd82" path="res://Scenes/help.tscn" id="6_lx7m2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jk5vj")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -5
offset_left = -74.0
offset_top = -56.0
offset_right = 2383.0
offset_bottom = 1326.0
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="Game" parent="." instance=ExtResource("1_034mo")]
visible = false

[node name="Title" parent="." instance=ExtResource("3_vmxd8")]
visible = false

[node name="Pause" type="ColorRect" parent="."]
visible = false
z_index = 10
offset_right = 2101.0
offset_bottom = 1154.0
color = Color(0, 0, 0, 0.552941)

[node name="Label" type="Label" parent="Pause"]
layout_mode = 0
offset_left = 124.0
offset_right = 1920.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 100
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node2D" parent="Pause"]
position = Vector2(772, 250)

[node name="Continue" type="Button" parent="Pause/Buttons"]
offset_right = 500.0
offset_bottom = 150.0
theme = ExtResource("4_ld5mg")
text = "Continue"

[node name="Settings" type="Button" parent="Pause/Buttons"]
offset_top = 200.0
offset_right = 500.0
offset_bottom = 350.0
theme = ExtResource("4_ld5mg")
text = "Settings"

[node name="Restart" type="Button" parent="Pause/Buttons"]
offset_top = 400.0
offset_right = 500.0
offset_bottom = 550.0
theme = ExtResource("4_ld5mg")
text = "Restart"

[node name="Quit" type="Button" parent="Pause/Buttons"]
offset_top = 600.0
offset_right = 500.0
offset_bottom = 750.0
theme = ExtResource("4_ld5mg")
text = "Quit"

[node name="GameOver" type="ColorRect" parent="."]
z_index = 10
offset_right = 2434.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 0.552941)

[node name="Label2" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 124.0
offset_top = 281.0
offset_right = 1920.0
offset_bottom = 548.0
theme_override_font_sizes/font_size = 50
text = "You survived
waves"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 124.0
offset_right = 1920.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="GameOver"]
position = Vector2(772, 550)

[node name="Button" type="Button" parent="GameOver/Node2D"]
offset_right = 500.0
offset_bottom = 150.0
theme = ExtResource("4_ld5mg")
text = "Restart"

[node name="Button2" type="Button" parent="GameOver/Node2D"]
offset_top = 200.0
offset_right = 500.0
offset_bottom = 350.0
theme = ExtResource("4_ld5mg")
text = "Quit"

[node name="Settings" parent="." instance=ExtResource("5_8kfcr")]

[node name="Button" type="Button" parent="Settings"]
z_index = 10
offset_left = 10.0
offset_top = 9.0
offset_right = 141.0
offset_bottom = 122.0
theme = ExtResource("4_ld5mg")
text = "X"

[node name="Help" parent="." instance=ExtResource("6_lx7m2")]
visible = false
z_index = 10

[connection signal="gameover" from="Game" to="." method="_on_game_gameover"]
[connection signal="button" from="Title" to="." method="button_down"]
[connection signal="button_up" from="Pause/Buttons/Continue" to="." method="unpause"]
[connection signal="button_down" from="Pause/Buttons/Settings" to="." method="open_settings"]
[connection signal="button_down" from="Pause/Buttons/Restart" to="." method="restart_game"]
[connection signal="button_down" from="Pause/Buttons/Quit" to="." method="to_title"]
[connection signal="button_down" from="GameOver/Node2D/Button" to="." method="restart_game"]
[connection signal="button_down" from="GameOver/Node2D/Button2" to="." method="to_title"]
[connection signal="button_down" from="Settings/Button" to="." method="close_settings"]
